@@ -1,12 +1,8 @@
 package net.meerkat.identifier.currency;
 
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.Set;
-
+import net.coljate.collection.Collection;
+import net.coljate.set.Set;
 import net.meerkat.identifier.HasIds;
-import net.ollie.goat.collection.Sets;
 
 /**
  *
@@ -16,22 +12,16 @@ public class CurrencyIds
         extends HasIds<CurrencyId>
         implements HasCurrencyIds {
 
-    private static final long serialVersionUID = 1L;
-
     public static CurrencyIds of(final CurrencyId id) {
-        return new CurrencyIds(Collections.singleton(id));
+        return new CurrencyIds(Set.of(id));
     }
 
     public static CurrencyIds of(final Collection<CurrencyId> ids) {
-        return new CurrencyIds(new HashSet<>(ids));
+        return new CurrencyIds(Set.copyIntoHashSet(ids));
     }
 
     public static CurrencyIds of(final CurrencyId... ids) {
-        return new CurrencyIds(Sets.asSet(ids));
-    }
-
-    @Deprecated
-    CurrencyIds() {
+        return new CurrencyIds(Set.of(ids));
     }
 
     public CurrencyIds(final Set<CurrencyId> ids) {
@@ -42,5 +32,5 @@ public class CurrencyIds
     public CurrencyIds currencyIds() {
         return this;
     }
-    
+
 }
